--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = snmp-to-icinga
-version = 0.1
+version = 0.2
 author = Rob Weber
 author_email = rweber@ecec.com
 description = Funnel SNMP trap data to Icinga
@@ -19,6 +19,7 @@ classifiers =
 install_requires =
   pyyaml
   cerberus
+  jinja2
 package_dir =
     = src
 packages = find:
