--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = snmp-to-icinga
-version = 0.2
+version = 0.3
 author = Rob Weber
 author_email = rweber@ecec.com
 description = Funnel SNMP trap data to Icinga
@@ -10,7 +10,7 @@ url = https://github.com/eau-claire-energy-cooperative/snmp-to-icinga
 project_urls =
     Bug Tracker = https://github.com/eau-claire-energy-cooperative/snmp-to-icinga/issues
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 2 - Beta
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: POSIX :: Linux
